--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@ qrc_*
 Makefile
 .qglviewer.xml
 
+build
 debug
 release
 
@@ -17,3 +18,4 @@ release
 *.vcxproj.filters
 *.vcxproj.user
 *.sln
+*.pro.user
